--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "stripe",
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "homepage": "https://github.com/richardbentil/stripe-subscription-back-end#readme",
+  "bugs": {
+    "url": "https://github.com/richardbentil/stripe-subscription-back-end/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/richardbentil/stripe-subscription-back-end.git"
+  },
+  "license": "MIT",
+  "author": "Richard Bentil",
   "type": "module",
-  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -19,6 +29,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
+    "stripe": "^17.5.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
     "nodemon": "^3.1.9"
   }
 }
